feat(update profile) input file avatarURL and ResumeURL
